added new people photos

--- a/people/index.html
+++ b/people/index.html
@@ -236,7 +236,7 @@ menuorder: 4
                   <h2 class="bio-heading">Joshua Vial</h2>
                   <h3 class="bio-sub">Director, developer &amp; mentor</h3>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-george.jpg" | prepend: site.baseurl }}" alt="Joshua Vial" />
+                    <img src="{{ "/img/people/real-josh.jpg" | prepend: site.baseurl }}" alt="Joshua Vial" />
                   </div>
                 </div>
                 <div class="bio-body">
@@ -268,7 +268,7 @@ menuorder: 4
                   <h2 class="bio-heading">Julia Hide</h2>
                   <h3 class="bio-sub">Front-end Developer</h3>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-julia-temp-lololol.jpg" | prepend: site.baseurl }}" alt="Julia Hide" />
+                    <img src="{{ "/img/people/real-julia.jpg" | prepend: site.baseurl }}" alt="Julia Hide" />
                   </div>
                 </div>
                 <div class="bio-body">
