--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@ ishome: true
           <p class="text-size-24 max-850">We combine <span class="emphasis">thoughtful design</span> with <span class="emphasis">clever technology</span> to help build successful software, websites &amp; apps for a range of private businesses &amp; progressive organisations.</p>
 
           <ul class="logo-grid">
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/1-nzta.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/2-ccc.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/3-linz.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/4-wine-marlborough.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/5-mdc.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/7-interlead.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/8-addington.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill square-logo" data-no-instant><img src="{{ "/img/client-logos/9-acc.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/10-mrc.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill square-logo" data-no-instant><img src="{{ "/img/client-logos/12-discover-travel.png" | prepend: site.baseurl }}" alt="" /></a></li>
+            <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/1-nzta.png" | prepend: site.baseurl }}" alt="NZTA" /></span></li>
+            <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/2-ccc.png" | prepend: site.baseurl }}" alt="" /></span></li>
+            <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/3-linz.png" | prepend: site.baseurl }}" alt="" /></span></li>
+            <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/4-wine-marlborough.png" | prepend: site.baseurl }}" alt="" /></span></li>
+            <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/5-mdc.png" | prepend: site.baseurl }}" alt="" /></span></li>
+            <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/7-interlead.png" | prepend: site.baseurl }}" alt="" /></span></li>
+            <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/8-addington.png" | prepend: site.baseurl }}" alt="" /></span></li>
+            <li class="grid-item"><span class="grid-item-link js-image-fill square-logo" data-no-instant><img src="{{ "/img/client-logos/9-acc.png" | prepend: site.baseurl }}" alt="" /></span></li>
+            <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/10-mrc.png" | prepend: site.baseurl }}" alt="" /></span></li>
+            <li class="grid-item"><span class="grid-item-link js-image-fill square-logo" data-no-instant><img src="{{ "/img/client-logos/12-discover-travel.png" | prepend: site.baseurl }}" alt="" /></span></li>
           </ul>
 
           <a href="{{ "/our-services" | prepend: site.baseurl }}" class="drop-btn orange-bg">Our services</a>
