Added TMP leading text

--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -102,7 +102,7 @@ menuorder: 2
             <div class="item-icons">
               <i class="icon icon-desktop tip"></i>
             </div>
-            <p>Media Suite developed the online appraisal system which is enhancing the professional learning of New Zealand teachers.</p>
+            <p>Media Suite built the system that is managing Christchurch’s Roadworks.</p>
             <a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
           </div>
         </div> <!-- .item-text -->
