--- a/case-studies/tmp-for-christchurch/index.html
+++ b/case-studies/tmp-for-christchurch/index.html
@@ -10,7 +10,7 @@ casestudyid: 4
     <h1 class="lowercase underline-orange">Case Study: TMP for Christchurch</h1>
 
     <div class="case-study-intro max-1000">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+      <p>Media Suite built the system that is managing Christchurch’s Roadworks.</p>
     </div>
 
     <div class="case-study-icons">
