Updated case studies

--- a/careers/index.html
+++ b/careers/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: Media Suite | Careers
-menutitle: Careers
-menuorder: 5
+!menutitle: Careers
+!menuorder: 5
 ---
 <div id="main-wrap" class="internal-page careers-page">
 
