--- a/case-studies/tmp-for-christchurch/index.html
+++ b/case-studies/tmp-for-christchurch/index.html
@@ -7,7 +7,7 @@ casestudyid: 4
 
   <div class="max-1200 align-center clearfix">
 
-    <h1 class="lowercase underline-orange">Case Study: TMP for Christchurch</h1>
+    <h1 class="lowercase underline-orange">TMP for Christchurch</h1>
 
     <div class="case-study-intro max-1000">
       <p>Media Suite built the system that is managing Christchurch’s Roadworks.</p>
@@ -15,15 +15,14 @@ casestudyid: 4
 
     <div class="case-study-icons">
       <div class="case-study-tech">
-        <a href="#" target="_blank" class="tech-icon tech-icon-js"><img src="{{ "/img/case-studies/tech-js.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-html"><img src="{{ "/img/case-studies/tech-html-css.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-node"><img src="{{ "/img/case-studies/tech-node.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-ember"><img src="{{ "/img/case-studies/tech-ember.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-leaflet"><img src="{{ "/img/case-studies/tech-leaflet.png" | prepend: site.baseurl }}" alt="" /></a>
+        <span class="tech-icon tech-icon-js"><img src="{{ "/img/case-studies/tech-js.png" | prepend: site.baseurl }}" alt="" /></span>
+        <span class="tech-icon tech-icon-html"><img src="{{ "/img/case-studies/tech-html-css.png" | prepend: site.baseurl }}" alt="" /></span>
+        <span class="tech-icon tech-icon-ember"><img src="{{ "/img/case-studies/tech-ember.png" | prepend: site.baseurl }}" alt="" /></span>
+        <span class="tech-icon tech-icon-leaflet"><img src="{{ "/img/case-studies/tech-leaflet.png" | prepend: site.baseurl }}" alt="" /></span>
+        <span class="tech-icon tech-icon-yii"><img src="{{ "/img/case-studies/tech-yii.png" | prepend: site.baseurl }}" alt="" /></span>
       </div>
       <div class="case-study-platforms">
         <i class="icon icon-desktop tip"></i>
-        <i class="icon icon-mobile tip"></i>
       </div>
     </div>
 
