--- a/case-studies/transport-for-christchurch/index.html
+++ b/case-studies/transport-for-christchurch/index.html
@@ -7,7 +7,7 @@ casestudyid: 1
 
   <div class="max-1200 align-center clearfix">
 
-    <h1 class="lowercase underline-orange">Case Study: Transport for Christchurch</h1>
+    <h1 class="lowercase underline-orange">Transport for Christchurch</h1>
 
     <div class="case-study-intro max-1000">
       <p>In the wake of the Canterbury earthquakes, Media Suite was engaged by the Christchurch Transport Operations Centre <em>(A joint venture between the New Zealand Transport Authority, Christchurch City Council other local councils)</em> to develop a long-term, web-based communication channel for the travelling public in the greater Christchurch region.</p>
@@ -15,11 +15,11 @@ casestudyid: 1
 
     <div class="case-study-icons">
       <div class="case-study-tech">
-        <a href="#" target="_blank" class="tech-icon tech-icon-js"><img src="{{ "/img/case-studies/tech-js.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-html"><img src="{{ "/img/case-studies/tech-html-css.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-node"><img src="{{ "/img/case-studies/tech-node.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-ember"><img src="{{ "/img/case-studies/tech-ember.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-leaflet"><img src="{{ "/img/case-studies/tech-leaflet.png" | prepend: site.baseurl }}" alt="" /></a>
+        <span class="tech-icon tech-icon-js"><img src="{{ "/img/case-studies/tech-js.png" | prepend: site.baseurl }}" alt="" /></span>
+        <span class="tech-icon tech-icon-html"><img src="{{ "/img/case-studies/tech-html-css.png" | prepend: site.baseurl }}" alt="" /></span>
+        <span class="tech-icon tech-icon-node"><img src="{{ "/img/case-studies/tech-node.png" | prepend: site.baseurl }}" alt="" /></span>
+        <span class="tech-icon tech-icon-ember"><img src="{{ "/img/case-studies/tech-ember.png" | prepend: site.baseurl }}" alt="" /></span>
+        <span class="tech-icon tech-icon-leaflet"><img src="{{ "/img/case-studies/tech-leaflet.png" | prepend: site.baseurl }}" alt="" /></span>
       </div>
       <div class="case-study-platforms">
         <i class="icon icon-desktop tip"></i>
