--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ ishome: true
               </div>
             </div> <!-- .col-half -->
             <div id="work-panel-content" class="col col-half">
-              <p class="text-semi">At the heart of our work lies our diverse range of clients.</p>
+              <p class="fancy-pants-font">At the heart of our work lies our diverse range of clients.</p>
               <p>In the last 15 years we have worked on over 1,400 projects for about 350 clients.</p>
               <a href="{{ "/case-studies" | prepend: site.baseurl }}" class="drop-btn orange-bg">View our portfolio</a>
             </div> <!-- .col-half -->
@@ -163,7 +163,7 @@ ishome: true
             </div>
             <div class="col third-col" id="culture-col-3">
               <h4><img class="curious-minds-text" src="{{ "/img/title-curious-minds-wanted.png" | prepend: site.baseurl }}" alt="Curious minds wanted for curious work" /></h4>
-              <a href="{{ "/careers" | prepend: site.baseurl }}" class="drop-btn orange-bg">Work here</a>
+              <!--<a href="{{ "/careers" | prepend: site.baseurl }}" class="drop-btn orange-bg">Work here</a>-->
             </div>
           </div> <!-- .cols-wrap -->
         </div> <!-- .faux-table-cell -->
