--- a/case-studies/appraisal-connector/index.html
+++ b/case-studies/appraisal-connector/index.html
@@ -6,22 +6,19 @@ casestudyid: 3
 <div id="main-wrap" class="internal-page case-study">
 
   <div class="max-1200 align-center clearfix">
-    <h1 class="lowercase underline-orange">Case Study: Appraisal Connector</h1>
+    <h1 class="lowercase underline-orange">Appraisal Connector</h1>
     <div class="case-study-intro max-1000">
       <p>Interlead chose Media Suite to develop the software behind Appraisal Connector&trade; - its online appraisal system designed to enhance the professional learning of New Zealand teachers.</p>
     </div>
 
     <div class="case-study-icons">
       <div class="case-study-tech">
-        <a href="#" target="_blank" class="tech-icon tech-icon-js"><img src="{{ "/img/case-studies/tech-js.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-html"><img src="{{ "/img/case-studies/tech-html-css.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-node"><img src="{{ "/img/case-studies/tech-node.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-ember"><img src="{{ "/img/case-studies/tech-ember.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-leaflet"><img src="{{ "/img/case-studies/tech-leaflet.png" | prepend: site.baseurl }}" alt="" /></a>
+        <span class="tech-icon tech-icon-js"><img src="{{ "/img/case-studies/tech-js.png" | prepend: site.baseurl }}" alt="" /></span>
+        <span class="tech-icon tech-icon-html"><img src="{{ "/img/case-studies/tech-html-css.png" | prepend: site.baseurl }}" alt="" /></span>
+        <span class="tech-icon tech-icon-yii"><img src="{{ "/img/case-studies/tech-yii.png" | prepend: site.baseurl }}" alt="" /></span>
       </div>
       <div class="case-study-platforms">
         <i class="icon icon-desktop tip"></i>
-        <i class="icon icon-mobile tip"></i>
       </div>
     </div>
 
