--- a/case-studies/forward-works-planner/index.html
+++ b/case-studies/forward-works-planner/index.html
@@ -6,22 +6,21 @@ casestudyid: 2
 <div id="main-wrap" class="internal-page case-study">
 
   <div class="max-1200 align-center clearfix">
-    <h1 class="lowercase underline-orange">Case Study: Forward Works Planner</h1>
+    <h1 class="lowercase underline-orange">Forward Works Planner</h1>
     <div class="case-study-intro max-1000">
       <p>Media Suite partnered with North South GIS and Jacobs Engineering Group to deliver the Forward Works Viewer as part of The Canterbury Spatial Data Infrastructure projects being developed by Land Information New Zealand.</p>
     </div>
 
     <div class="case-study-icons">
       <div class="case-study-tech">
-        <a href="#" target="_blank" class="tech-icon tech-icon-js"><img src="{{ "/img/case-studies/tech-js.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-html"><img src="{{ "/img/case-studies/tech-html-css.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-node"><img src="{{ "/img/case-studies/tech-node.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-ember"><img src="{{ "/img/case-studies/tech-ember.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-leaflet"><img src="{{ "/img/case-studies/tech-leaflet.png" | prepend: site.baseurl }}" alt="" /></a>
+        <span class="tech-icon tech-icon-js"><img src="{{ "/img/case-studies/tech-js.png" | prepend: site.baseurl }}" alt="" /></span>
+        <span class="tech-icon tech-icon-html"><img src="{{ "/img/case-studies/tech-html-css.png" | prepend: site.baseurl }}" alt="" /></span>
+        <span class="tech-icon tech-icon-node"><img src="{{ "/img/case-studies/tech-node.png" | prepend: site.baseurl }}" alt="" /></span>
+        <span class="tech-icon tech-icon-angular"><img src="{{ "/img/case-studies/tech-angular.png" | prepend: site.baseurl }}" alt="" /></span>
+        <span class="tech-icon tech-icon-leaflet"><img src="{{ "/img/case-studies/tech-leaflet.png" | prepend: site.baseurl }}" alt="" /></span>
       </div>
       <div class="case-study-platforms">
         <i class="icon icon-desktop tip"></i>
-        <i class="icon icon-mobile tip"></i>
       </div>
     </div>
 
