--- a/say-hello/index.html
+++ b/say-hello/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Media Suite | Say hello
-menutitle: Say hello
+title: Media Suite | Contact us
+menutitle: Contact us
 menuorder: 5
 isfullheight: true
 ---
