--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ ishome: true
             </div>
             <div class="col third-col" id="culture-col-2">
               <ul class="no-list-style">
-                <li>Curious</li>
+                <li>Curiosity</li>
                 <li>Openness</li>
                 <li>Freedom</li>
                 <li>Accountability</li>
