Changing name text

--- a/our-services/index.html
+++ b/our-services/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Media Suite | What we do
-menutitle: Our services
+title: Media Suite | Services
+menutitle: Services
 menuorder: 3
 isfullheight: true
 ---
@@ -10,7 +10,7 @@ isfullheight: true
 
   <div class="panel-inner max-570 clearfix">
 
-      <h1 class="lowercase underline-orange">Our Services</h1>
+      <h1 class="lowercase underline-orange">Services</h1>
 
       <div class="service-icons">
         <div id="service-icon-web" class="service-icon">
