--- a/people/index.html
+++ b/people/index.html
@@ -38,7 +38,7 @@ menuorder: 4
             <div class="faux-table">
               <div class="faux-table-cell">
                 <div class="bio-head">
-                  <h2 class="bio-heading">Abigail Little (aka A+)</h2>
+                  <h2 class="bio-heading">Abigail Little</h2>
                   <h3 class="bio-sub">Commercial Manager</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-abi.jpg" | prepend: site.baseurl }}" alt="Abi Little" />
@@ -362,7 +362,7 @@ menuorder: 4
             <div class="faux-table">
               <div class="faux-table-cell">
                 <div class="bio-head">
-                  <h2 class="bio-heading">Matt (in-a-hat) Lang</h2>
+                  <h2 class="bio-heading">Matt Lang</h2>
                   <h3 class="bio-sub">Full Stack Developer</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-matt.jpg" | prepend: site.baseurl }}" alt="Matt Lang" />
@@ -460,7 +460,7 @@ Pete is a Project Management Professional, Prince2 Practitioner and is also a ce
             <div class="faux-table">
               <div class="faux-table-cell">
                 <div class="bio-head">
-                  <h2 class="bio-heading">Richard Walker (aka Richie)</h2>
+                  <h2 class="bio-heading">Richard Walker</h2>
                   <h3 class="bio-sub">Lead Developer</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-richie.jpg" | prepend: site.baseurl }}" alt="Richie Walker" />
