added breadcrumbs to case study pages

--- a/case-studies/appraisal-connector/index.html
+++ b/case-studies/appraisal-connector/index.html
@@ -1,12 +1,14 @@
 ---
 layout: default
 title: Case Studies | Appraisal Connector
+casestudyname: Appraisal Connector
 casestudyid: 3
 ---
 <div id="main-wrap" class="internal-page case-study">
 
   <div class="max-1200 align-center clearfix">
     <h1 class="lowercase underline-orange">Appraisal Connector</h1>
+    {% include crumbs.html %}
     <div class="case-study-intro max-1000">
       <p>Interlead chose Media Suite to develop the software behind Appraisal Connector&trade; - its online appraisal system designed to enhance the professional learning of New Zealand teachers.</p>
     </div>
