--- a/case-studies/marlborough-cruise-guide/index.html
+++ b/case-studies/marlborough-cruise-guide/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Case Studies | Marlborough Cruise Guide
+casestudyname: Marlborough Cruise Guide
 casestudyid: 2
 ---
 <div id="main-wrap" class="internal-page case-study">
@@ -8,7 +9,7 @@ casestudyid: 2
   <div class="max-1200 align-center clearfix">
 
     <h1 class="lowercase underline-orange">Case Study: Marlborough Cruise Guide</h1>
-
+    {% include crumbs.html %}
     <div class="case-study-intro max-1000">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
     </div>
