--- a/case-studies/transport-for-christchurch/index.html
+++ b/case-studies/transport-for-christchurch/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Case Studies | Transport for Christchurch
+casestudyname: Transport for Christchurch
 casestudyid: 1
 ---
 <div id="main-wrap" class="internal-page case-study">
@@ -8,7 +9,7 @@ casestudyid: 1
   <div class="max-1200 align-center clearfix">
 
     <h1 class="lowercase underline-orange">Transport for Christchurch</h1>
-
+    {% include crumbs.html %}
     <div class="case-study-intro max-1000">
       <p>In the wake of the Canterbury earthquakes, Media Suite was engaged by the Christchurch Transport Operations Centre <em>(A joint venture between the New Zealand Transport Authority, Christchurch City Council other local councils)</em> to develop a long-term, web-based communication channel for the travelling public in the greater Christchurch region.</p>
     </div>
