--- a/case-studies/forward-works-planner/index.html
+++ b/case-studies/forward-works-planner/index.html
@@ -1,12 +1,14 @@
 ---
 layout: default
 title: Case Studies | Forward Works Planner
+casestudyname: Forward Works Planner
 casestudyid: 2
 ---
 <div id="main-wrap" class="internal-page case-study">
 
   <div class="max-1200 align-center clearfix">
     <h1 class="lowercase underline-orange">Forward Works Planner</h1>
+    {% include crumbs.html %}
     <div class="case-study-intro max-1000">
       <p>Media Suite partnered with North South GIS and Jacobs Engineering Group to deliver the Forward Works Viewer as part of The Canterbury Spatial Data Infrastructure projects being developed by Land Information New Zealand.</p>
     </div>
