--- a/case-studies/tmp-for-christchurch/index.html
+++ b/case-studies/tmp-for-christchurch/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Case Studies | TMP for Christchurch
+casestudyname: TMP for Christchurch
 casestudyid: 4
 ---
 <div id="main-wrap" class="internal-page case-study">
@@ -8,7 +9,7 @@ casestudyid: 4
   <div class="max-1200 align-center clearfix">
 
     <h1 class="lowercase underline-orange">TMP for Christchurch</h1>
-
+    {% include crumbs.html %}
     <div class="case-study-intro max-1000">
       <p>Media Suite built the system that is managing Christchurch’s Roadworks.</p>
     </div>
