--- a/case-studies/appraisal-connector/index.html
+++ b/case-studies/appraisal-connector/index.html
@@ -19,6 +19,7 @@ casestudyid: 3
       </div>
       <div class="case-study-platforms">
         <i class="icon icon-desktop tip"></i>
+        <i class="icon icon-cog tip"></i>
       </div>
     </div>
 
