--- a/case-studies/tmp-for-christchurch/index.html
+++ b/case-studies/tmp-for-christchurch/index.html
@@ -23,6 +23,7 @@ casestudyid: 4
       </div>
       <div class="case-study-platforms">
         <i class="icon icon-desktop tip"></i>
+        <i class="icon icon-cog tip"></i>
       </div>
     </div>
 
