add analytics code, meta tags, title tags

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Media Suite | Thoughtful Design, Clever Technology
+title: Web Application Developers Christchurch | Media Suite
 menutitle: Home
 menuorder: 1
 ishome: true
