text tweaks from George

--- a/people/index.html
+++ b/people/index.html
@@ -78,7 +78,6 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>After 15 years of perfecting his craft, Andrew has a body of work to his name which most can only aspire to. He has the rare knack of being able to take an idea and distil it down to its raw ingredients, thus providing the basis for a thoughtful design. Andrew inspires our teams to constantly try new things and to evolve.</p>
-                  <strong>This old dog has plenty more new tricks.</strong>
                 </div>
               </div>
             </div>
@@ -168,14 +167,13 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">George Wills</h2>
-                  <h3 class="bio-sub">General Manager &amp; Account Manager</h3>
+                  <h3 class="bio-sub">Managing Director</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-george.jpg" | prepend: site.baseurl }}" alt="George Wills" />
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Kite Surfer, Glider Pilot, Yachtsman. George wears many hats but when he's not playing wind sports (or wearing hats) you'll find him pulling strings, peddling our wares and generally keeping the Media Suite's wheels spinning. </p>
-                  <strong>&hellip; While he has spent almost 20 weeks on crutches this year it has hardly slowed him down.</strong>
+                  <p>Kite Surfer, Glider Pilot, Yachtsman. George wears many hats but when he's not playing wind sports (or wearing hats) you'll find him pulling strings, peddling our wares and generally keeping the Media Suite's wheels spinning. While he has spent almost 20 weeks on crutches this year it has hardly slowed him down.</p>
                 </div>
               </div>
             </div>
@@ -207,7 +205,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Jonathan is a kiwi now based in Munich. Since he was a small boy Jonathan wanted to know how things work, this led to many hours spent taking things apart and sometimes putting them back together.</p>
+                  <p>Since he was a small boy Jonathan wanted to know how things work, this led to many hours spent taking things apart and sometimes putting them back together.</p>
                   <p>Nowadays there is less taking apart and more putting stuff together. His current weapon of choice is JavaScript.</p>
                 </div>
               </div>
@@ -298,14 +296,13 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Lewis Christie</h2>
-                  <h3 class="bio-sub">Roaming Developer</h3>
+                  <h3 class="bio-sub">Full Stack Developer</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-lewis.jpg" | prepend: site.baseurl }}" alt="Lewis Christie" />
                   </div>
                 </div>
                 <div class="bio-body">
                   <p>Lewis's passion for climbing and travelling is currently dragging him (and his laptop) around the world. Lewis is an encyclopaedia of knowledge - much accurate, some relevant. Just don't ask him where he is going to be living next month because; a) he doesn't know; b) it will make you jealous</p>
-                  <strong>&hellip; Recent residences include: Cat Ba, Hanoi, Getu &amp; Innsbruck, Boulder &amp; Nelson.</strong>
                 </div>
               </div>
             </div>
@@ -402,7 +399,6 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>Patrick is a craftsman who finds pleasure in perfecting his trade. After studying Mechanical Engineering at Boston University he fell into the tech startup world and has been building software ever since. Patrick is one of our remote developers.</p>
-                  <strong>&hellip; (Current Timezone UTC +10)</strong>
                 </div>
               </div>
             </div>
@@ -468,8 +464,7 @@ Pete is a Project Management Professional, Prince2 Practitioner and is also a ce
                 </div>
                 <div class="bio-body">
                   <p>Richie is a technology evangelist whose passion for code is infectious. His enthusiasm for learning and continuous improvement has seeded a movement at Media Suite.
-Originally from Christchurch, Richie is now based in Oslo where he leads our European team.</p>
-                  <strong>Richie is also an ancient history geek - currently engrossed in Assyria, Sumer and Akkad.</strong>
+Originally from Christchurch, Richie is now based in Oslo where he leads our European team. Richie is also an ancient history geek - currently engrossed in Assyria, Sumer and Akkad.</p>
                 </div>
               </div>
             </div>
@@ -502,7 +497,6 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
                 </div>
                 <div class="bio-body">
                   <p>Sarah is the creative genius behind much of our design and branding work. Being a classically trained artist and with over 15 years experience as a graphic designer she possesses the ability to deconstruct the essence of visual ideas down to their elements.</p>
-                  <strong>Sarah is also a painter - some of her work can be found on the walls at Media Suite.</strong>
                 </div>
               </div>
             </div>
