--- a/case-studies/forward-works-viewer/index.html
+++ b/case-studies/forward-works-viewer/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: Case Studies | Forward Works Planner
-casestudyname: Forward Works Planner
+title: Case Studies | Forward Works Viewer
+casestudyname: Forward Works Viewer
 casestudyid: 2
 ---
 <div id="main-wrap" class="internal-page case-study">
 
   <div class="max-1200 align-center clearfix">
-    <h1 class="lowercase underline-orange">Forward Works Planner</h1>
+    <h1 class="lowercase underline-orange">Forward Works Viewer</h1>
     {% include crumbs.html %}
     <div class="case-study-intro max-1000">
       <p>Media Suite partnered with North South GIS and Jacobs Engineering Group to deliver the Forward Works Viewer as part of The Canterbury Spatial Data Infrastructure projects being developed by Land Information New Zealand.</p>
