changed default bold to 600

--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@ ishome: true
           <h2 class="lowercase underline-orange">Cost and Value</h2>
           <div class="cols-wrap">
             <div class="col col-half middle text-size-24">
-              <p>We are best suited to large or complex projects which have the potential to create a lot of value. Common projects run from a few months to a year or more, with budgets from $40k to over $1 million.</p>
-              <p>Custom software development is a big investment. We partner with you to mitigate risk, make smart trade-offs, and get the maximum value for your budget.</p>
+              <p>We are best suited to large or <strong>complex projects</strong> which have the potential to create a lot of value.</p>
+              <p>Common projects run from a few months to a year or more, with budgets from $40k to over $1 million.</p>
+              <p><strong>Custom software development</strong> is a big investment. We partner with you to mitigate risk, make smart trade-offs, and get the <strong>maximum value for your budget</strong>.</p>
             </div>
             <div class="col col-half middle">
               <div class="value-wheel-wrap levitate">
