services page bolding and related case studies name/links update

--- a/our-services/index.html
+++ b/our-services/index.html
@@ -47,7 +47,7 @@ isfullheight: true
       </div>
       <div class="service-text">
         <h2 class="lowercase service-heading">Ideation</h2>
-        <p>Generating, developing and communicating ideas excites us. We are able to draw on decades of experience working with hundreds of great organisations to examine, refine and innovate on your ideas.</p>
+        <p>Generating, developing and communicating ideas excites us. We are able to draw on <span class="fancy-pants-font">decades of experience</span> working with hundreds of great organisations to examine, refine and <span class="fancy-pants-font">innovate on your ideas</span>.</p>
       </div>
     </div>
 
@@ -58,7 +58,7 @@ isfullheight: true
       </div>
       <div class="service-text">
         <h2 class="lowercase service-heading">Analysis</h2>
-        <p>We thrive on teasing out requirements from stakeholders, prioritising using value driven methods and fleshing out enough detail to ensure you're building the right thing.</p>
+        <p>We thrive on teasing out requirements from stakeholders, prioritising using <span class="fancy-pants-font">value driven methods</span> and fleshing out enough detail to ensure you're <span class="fancy-pants-font">building the right thing</span>.</p>
       </div>
     </div>
 
@@ -69,7 +69,7 @@ isfullheight: true
       </div>
       <div class="service-text">
         <h2 class="lowercase service-heading">Design</h2>
-        <p>Thoughtful Design is an art form. It is the intersection of strategy, research and analysis with user interface and experience expressed as a visual design.</p>
+        <p><span class="fancy-pants-font">Thoughtful design</span> is an art form. It is the intersection of strategy, research and analysis with user interface and experience expressed as a visual design.</p>
       </div>
     </div>
 
@@ -80,7 +80,7 @@ isfullheight: true
       </div>
       <div class="service-text">
         <h2 class="lowercase service-heading">Development</h2>
-        <p>Our multi disciplined development teams are nimble. Working closely with you to gain feedback they will help you make smart choices and respond to change throughout your project.</p>
+        <p>Our <span class="fancy-pants-font">multi-disciplined</span> development teams are nimble. Working closely with you to gain feedback they will help you make smart choices and <span class="fancy-pants-font">respond to change</span> throughout your project.</p>
       </div>
     </div>
 
@@ -91,7 +91,7 @@ isfullheight: true
       </div>
       <div class="service-text">
         <h2 class="lowercase service-heading">Deployment</h2>
-        <p>Whether deploying to the cloud, your data centre or to the app store - we've got you covered around the clock. We work extensively with cloud providers and local hosting companies to ensure your project is scalable and available.</p>
+        <p>Whether deploying to the cloud, your data centre or to the app store - <span class="fancy-pants-font">we've got you covered</span> around the clock. We work extensively with cloud providers and local hosting companies to ensure your project is scalable and available.</p>
       </div>
     </div>
 
@@ -102,7 +102,7 @@ isfullheight: true
       </div>
       <div class="service-text">
         <h2 class="lowercase service-heading">Marketing</h2>
-        <p>Successful products are often a balance between solving a problem, an interface the customer can relate to and effective marketing. Our belief is that marketing should start from within and your users are your best salespeople. As well as developing your product we can also help take it to market.</p>
+        <p>Successful products are often a balance between solving a problem, an interface the customer can relate to and effective marketing. Our belief is that <span class="fancy-pants-font">marketing should start from within</span> and your users are your best salespeople. As well as developing your product we can also help take it to market.</p>
       </div>
     </div>
 
@@ -113,7 +113,7 @@ isfullheight: true
       </div>
       <div class="service-text">
         <h2 class="lowercase service-heading">Support</h2>
-        <p>We will be around for the long haul ready to support and maintain your software through its evolution. Our support team can provide support to your users as well as proactive management of your software and hosting.</p>
+        <p>We will be around for the long haul ready to support and <span class="fancy-pants-font">maintain your software through its evolution</span>. Our support team can provide support to your users as well as proactive management of your software and hosting.</p>
       </div>
     </div>
 
